--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <title>One&&Only</title>
+    <title>ΔVerse</title>
     <link rel="stylesheet" href="overall.css">
 </head>
 <body>
     <header>
-        <div class="header-logo"><a href="#top">One&&Only</a></div>
+        <div class="header-logo"><a href="#top">ΔVerse</a></div>
         <div class="header-list">
             <ul>
                 <li><a class="button" href="https://www.unity.com">Unity</a></li>
@@ -23,7 +23,7 @@
         <div class="yohaku" id="top">
             <div class="intro">
                 <p>We are the</p>
-                <h1>One&&Only.</h1>
+                <h1>ΔVerse.</h1>
             </div>
         </div>
         <div class="description">
@@ -36,16 +36,16 @@
             <div class="space2"></div>
             <div class="setumei">
                 <div class="s_content">
-                    <h1>One&&Onlyについて</h1>
+                    <h1>ΔVerseについて</h1>
                 </div>
                 <div class="s_content">
-                    <p><span>One&&Only</span>とは、2022年に結成された高校生4人のチーム。</p>
+                    <p><span>ΔVerse</span>とは、2022年に結成された高校生4人のチーム。</p>
                 </div>
                 <div class="s_content">
                     <p>それまでばらばらだった4人が集った理由、それは<span>ゲーム製作</span>。</p>
                 </div>
                 <div class="s_content">
-                    <p>このサイトはOne&&Onlyの作品を集めたものです。</p>
+                    <p>このサイトはΔVerseの作品を集めたものです。</p>
                 </div>
                 <div class="s_content">
                     <p>珠玉の作品たちを、ぜひお楽しみください。</p>
@@ -69,7 +69,7 @@
                     </div>
                     <div class="bb">
                         <div class="self-intro">
-                            <p>Parali。One&&Onlyのリーダーで、Unity歴が一番長い。</p>
+                            <p>Parali。ΔVerseのリーダーで、Unity歴が一番長い。趣味は人間観察</p>
                         </div>
                         <div class="games">
                             <div class="game">
@@ -152,7 +152,7 @@
         <div class="forspace"></div>
         <div class="footer">
             <div class="footer-content">
-                <h1>ふったあ。</h1>
+                <h1>ふったあ。つ</h1>
             </div>
         </div>
     </div>
