--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
             </ul>
         </div>
     </header>
-    <!--<div class="border"></div>-->
     <div class="main">
         <div class="yohaku" id="top">
             <div class="intro">
@@ -27,12 +26,6 @@
             </div>
         </div>
         <div class="description">
-            <!--<div class="sec_title">
-                <div class="sec_main">
-                    <p>About this site</p>
-                </div>
-                <p class="sec_sub">このサイトについて</p>
-            </div>-->
             <div class="space2"></div>
             <div class="setumei">
                 <div class="s_content">
@@ -53,7 +46,19 @@
                 
             </div>
         </div>
-        <div class="border"></div>
+        <div class="mid_sec">
+            <div class="photoes">
+                <div class="photo no1" ></div>
+                <div class="photo no2" ></div>
+                <div class="photo no3" ></div>
+            </div>
+            <div class="desc">
+                <p>ΔVerseのΔ(デルタ)は、古代ギリシャにおける4を表す文字。</p>
+                <p>そしてVerseとは、世界。</p>
+                <p>我々四人が作り出す世界を皆に届ける、</p>
+                <p>そんな意味を持ったチーム名。</p>
+            </div>
+        </div>
         <div class="game-pres">
             <div class="sec_title">
                 <div class="sec_main">
@@ -64,12 +69,12 @@
             <div class="maker-group">
                 <div class="maker-intro" id="mh">
                     <div class="space"></div>
-                    <div class="name">
+                    <div class="name1">
                         <h1>Parali</h1>
                     </div>
                     <div class="bb">
-                        <div class="self-intro">
-                            <p>Parali。ΔVerseのリーダーで、Unity歴が一番長い。趣味は人間観察</p>
+                        <div class="self-intro1">
+                            <p>Parali。ΔVerseのリーダーで、Unity歴が一番長い。</p>
                         </div>
                         <div class="games">
                             <div class="game">
@@ -85,11 +90,11 @@
                 </div>
                 <div class="maker-intro" id="hb">
                     <div class="space"></div>
-                    <div class="name">
+                    <div class="name2">
                         <h1>Anopla</h1>
                     </div>
                     <div class="bb">
-                        <div class="self-intro">
+                        <div class="self-intro2">
                             <p>Anopla。いろいろと忙しいが、ゲーム作りにかける情熱は人一倍持っている。</p>
                         </div>
                         <div class="games">
@@ -106,11 +111,11 @@
                 </div>
                 <div class="maker-intro" id="yy">
                     <div class="space"></div>
-                    <div class="name">
+                    <div class="name1">
                         <h1>ようきん</h1>
                     </div>
                     <div class="bb">
-                        <div class="self-intro">
+                        <div class="self-intro1">
                             <p>ようきん。Unity歴第二位。ふざけてるように見えて結構優しい。</p>
                         </div>
                         <div class="games">
@@ -127,11 +132,11 @@
                 </div>
                 <div class="maker-intro" id="tn">
                     <div class="space"></div>
-                    <div class="name">
+                    <div class="name2">
                         <h1>Takana</h1>
                     </div>
                     <div class="bb">
-                        <div class="self-intro">
+                        <div class="self-intro2">
                             <p>Takana。Unityは始めたばっかりだが、毎日がとても楽しいらしい。</p>
                         </div>
                         <div class="games">
@@ -147,6 +152,7 @@
                     </div>
                 </div>
             </div>
+
         </div>
         <div class="border"></div>
         <div class="forspace"></div>
